--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
     "eslint-config-prettier": "^8.5.0",
+    "groq": "^2.29.3",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-code-blocks": "^0.0.9-0",
