--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^1.0.6",
+    "@sanity/asset-utils": "^1.2.3",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
     "eslint-config-prettier": "^8.5.0",
